# mybro

./: .gitignore  ARCHITECTURE.md  BACKEND.md  FRONTEND.md  build_mac_app.sh  chat.py  pyproject.toml
backend/: config.py  main.py
backend/api/: dashboard.py  feed.py  insights.py  projects.py  system.py  tickets.py  time_tracking.py
backend/db/: postgres.py  redis.py  sqlite.py
backend/db/migrations/: 001_initial.sql  002_sessions_health.sql
backend/services/: digitalocean.py  git_info.py  health_scorer.py  loc_counter.py  process_scanner.py  repo_auditor.py  scheduler.py  session_scanner.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CompactFeed.tsx  Layout.tsx  ProjectCard.tsx  ProjectTable.tsx  StatusFeed.tsx  SystemStatusStrip.tsx
frontend/src/pages/: Dashboard.tsx  Tickets.tsx  TimeTracking.tsx
launchd/: com.mybro.server.plist  com.mybro.tpm.plist  com.mybro.tracker.plist  install.sh
tpm/: collector.py  fixer.py  main.py  reporter.py
tracker/: afk_detector.py  classifier.py  input_monitor.py  main.py  screenshot.py
